feat: port themes from opencode

--- a/apps/native/global.css
+++ b/apps/native/global.css
@@ -4,6 +4,34 @@
 @import "./themes/opencode.css";
 @import "./themes/dracula.css";
 @import "./themes/nord.css";
+@import "./themes/ayu.css";
+@import "./themes/cursor.css";
+@import "./themes/palenight.css";
+@import "./themes/rosepine.css";
+@import "./themes/vercel.css";
+@import "./themes/kanagawa.css";
+@import "./themes/orng.css";
+@import "./themes/catppuccin-macchiato.css";
+@import "./themes/catppuccin.css";
+@import "./themes/mercury.css";
+@import "./themes/cobalt2.css";
+@import "./themes/aura.css";
+@import "./themes/gruvbox.css";
+@import "./themes/lucent-orng.css";
+@import "./themes/monokai.css";
+@import "./themes/catppuccin-frappe.css";
+@import "./themes/nightowl.css";
+@import "./themes/zenburn.css";
+@import "./themes/matrix.css";
+@import "./themes/tokyonight.css";
+@import "./themes/flexoki.css";
+@import "./themes/everforest.css";
+@import "./themes/vesper.css";
+@import "./themes/github.css";
+@import "./themes/material.css";
+@import "./themes/solarized.css";
+@import "./themes/one-dark.css";
+@import "./themes/synthwave84.css";
 
 @theme {
 	--font-sans: "Inter";
