fix(themes): fix lucent-orng theme 'transpa80' typo
Replace malformed 'transpa80' color value with proper hex+alpha '#8a8a8a80'.
This typo caused switch component crashes due to invalid color interpolation.

Closes: oc-b8b

--- a/apps/native/themes/lucent-orng.css
+++ b/apps/native/themes/lucent-orng.css
@@ -64,7 +64,7 @@
 			--input-hover: transparent;
 			--input-active: transparent;
 			--input-selected: #c94d2433;
-			--input-disabled: transpa80;
+			--input-disabled: #8a8a8a80;
 		}
 	}
 
@@ -133,7 +133,7 @@
 			--input-hover: transparent;
 			--input-active: transparent;
 			--input-selected: #fff7f133;
-			--input-disabled: transpa80;
+			--input-disabled: #8a8a8a80;
 		}
 	}
 }
